# otus

./: .gitignore  .gitmodules  CMakeLists.txt
1/1-tank/: CMakeLists.txt
1/1-tank/src/: CMakeLists.txt  UObject.h  adapters.h  command.h  commands.h  interfaces.h  main.cpp  objects.h  tank.h  vector2d.h
1/1-tank/tests/: CMakeLists.txt  tests.cpp
1/2-matrix/: CMakeLists.txt  Makefile  cmake_install.cmake
1/2-matrix/src/: CMakeLists.txt  matrix.cpp  matrix.h  matrix_operations.cpp  matrix_operations.h  matrix_utils.cpp  matrix_utils.h
1/2-matrix/tests/: CMakeLists.txt  test.cpp
